Improve performance of event queue (and fix some accidentally dead code).